--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -7,7 +7,7 @@
       </div>
       <div class="form-group">
         <label>Image URL</label>
-        <%= f.text_field :image_url, class: 'form-control' %>
+        <%= f.file_field :photo %>
       </div>
       <%= f.submit "Post", class: 'btn btn-success btn-block btn-lg' %>
     <% end %>
@@ -20,10 +20,11 @@
 
 <div class='row'>
   <% @posts.each do |post| %>
-    <div class="col-sm-6 col-md-4">
+    <div class="col-md-6 col-md-4">
       <div class="thumbnail">
-        <img src='<%= post.image_url %>' />
+        <img src="<%= post.photo.url %>" /> 
         <div class="caption">
+
           <h5><%= post.title %></h5>
         </div>
       </div>
